Add function to filter events list
Still buggy on reload and tab switching

--- a/web/css/wv.sidebar.css
+++ b/web/css/wv.sidebar.css
@@ -30,7 +30,11 @@
 }
 
 #productsHolder footer {
-  padding: 10px 0;
+  padding: 10px;
+}
+
+#productsHolder footer p {
+  margin: 0.5em 0;
 }
 
 #productsHolder footer .action {
